@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.89 2005/03/20 05:11:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.90 2005/03/20 08:52:26 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  20 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added _get_packages_to_emerge() to GLIArchitectureTemplate and calls in
+  stage1() and stage2()
 
   19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed a couple bugs in add_netmount() in GLIInstallProfile. spawn() outputs
